--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#0E1428">
     <link rel="icon" type="image/png" href="./images/favicon.png">
-    <title>Stellar Insights</title>
+    <title>Thái Ất Kim Hoa</title>
 
 
 
